--- a/elda-testing-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/elda-testing-webapp/src/main/webapp/WEB-INF/web.xml
@@ -8,53 +8,15 @@
      <param-value>elda-config.ttl</param-value>
   </context-param>
 
-    <filter>
-        <filter-name>Jersey Web Application</filter-name>
-        <filter-class>com.sun.jersey.spi.container.servlet.ServletContainer</filter-class>
-
-        <init-param>
-          <param-name>com.sun.jersey.config.property.packages</param-name>
-          <param-value>com.epimorphics.lda.restlets</param-value>
-        </init-param>
-
-        <init-param>
-          <param-name>com.sun.jersey.config.feature.FilterForwardOn404</param-name>
-          <param-value>true</param-value>
-        </init-param>
-
-        <init-param>
-             <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-             <param-value>com.sun.jersey.api.container.filter.PostReplaceFilter</param-value>
-         </init-param>
-  </filter>
-
-<!--
   <servlet>
     <servlet-name>jersey</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-
-    <init-param>
-      <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
-
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
--->
-
-  <!-- ==================================================================== -->
-
-  <filter-mapping>
-    <filter-name>Jersey Web Application</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-
-<!--
   <servlet-mapping>
     <servlet-name>jersey</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
--->
 
   <servlet-mapping>
     <servlet-name>default</servlet-name>
