--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -47,6 +47,11 @@
       <version>4.13.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.19.0</version>
+    </dependency>
   </dependencies>
 
   <build>
