Address warning about plugins with unspecified version

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
+          <version>3.3.1</version>
           <configuration>
             <encoding>UTF-8</encoding>
           </configuration>
@@ -68,6 +69,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.14.1</version>
           <configuration>
             <source>${jdk.version}</source>
             <target>${jdk.version}</target>
