--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -177,11 +177,12 @@
       <groupId>org.jmock</groupId>
       <artifactId>jmock-legacy</artifactId>
       <version>2.6.0</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>2.0.2-beta</version>
+      <artifactId>mockito-core</artifactId>
+      <version>2.28.2</version>
       <scope>test</scope>
     </dependency>
 
