--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda</artifactId>
-  <version>2.0.4</version>
+  <version>2.0.5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>elda</name>
   <description>Top level linked data API project</description>
@@ -12,7 +12,7 @@
   <scm>
       <developerConnection>scm:git:git@github.com:epimorphics/elda.git</developerConnection>
       <url>https://github.com/epimorphics/elda</url>
-      <tag>elda-2.0.4</tag>
+      <tag>HEAD</tag>
   </scm>
 
   <properties>
