--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -283,20 +283,20 @@
         </executions>
       </plugin>
 
-      <!--          <plugin>-->
-      <!--          <artifactId>maven-source-plugin</artifactId>-->
-      <!--          <version>2.1.1</version>-->
-      <!--          <executions>-->
-      <!--            <execution>-->
-      <!--                <id>bundle-sources</id>-->
-      <!--                <phase>package</phase>-->
-      <!--                <goals>-->
-      <!--                  &lt;!&ndash; produce source artifact for main project sources &ndash;&gt;-->
-      <!--                    <goal>jar-no-fork</goal>-->
-      <!--                </goals>-->
-      <!--            </execution>-->
-      <!--          </executions>-->
-      <!--        </plugin>-->
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.1</version>
+        <executions>
+          <execution>
+            <id>bundle-sources</id>
+            <phase>package</phase>
+            <goals>
+              <!-- produce source artifact for main project sources -->
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
     </plugins>
 
