--- a/elda-testing-webapp/src/main/webapp/log4j.properties
+++ b/elda-testing-webapp/src/main/webapp/log4j.properties
@@ -1,39 +1,6 @@
-log4j.rootLogger=INFO, stderr
-log4j.logger.org.apache.http.wire=INFO
-log4j.logger.org.eclipse.jetty=INFO
-log4j.logger.com.hp.hpl.jena.shared=INFO
-
-log4j.logger.org.apache.catalina=WARN
-log4j.logger.org.apache.tomcat=WARN
-
-
-
-# Set up logging to include a file record of the output
-# Note: the file is always created, even if there is
-# no actual output.
-# log4j.rootLogger=INFO, stderr, R
-
-# Example of switching on debug level logging for part of tree
-# log4j.logger.com.hp.hpl.jena.graph.test=debug
-
-# Log format to standard out
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-# Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern= %d{ISO8601} %5p [%t] (%F:%L) - %m%n
-
-# Log format to standard error
-log4j.appender.stderr=org.apache.log4j.ConsoleAppender
-log4j.appender.stderr.target=System.err
-log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
-# Pattern to output the caller's file name and line number.
-log4j.appender.stderr.layout.ConversionPattern= %d{ISO8601} %5p [%t] (%F:%L) - %m%n
-
-# File based log output
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=jena2.log
-log4j.appender.R.MaxFileSize=5000KB
-# Keep one backup file
-log4j.appender.R.MaxBackupIndex=1
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern= %d{ISO8601} %p %t %c - %m%n
+appender.console.type=Console
+appender.console.name=STDOUT
+appender.console.layout.type=PatternLayout
+appender.console.layout.pattern=%d{yyyy-mm-ddTHH:mm:ss.SSS}{UTC}Z %5p %x %m%n
+rootLogger.level=INFO
+rootLogger.appenderRef.0.ref=STDOUT
