--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -103,6 +103,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.glassfish.jersey.inject</groupId>
+      <artifactId>jersey-hk2</artifactId>
+      <version>${ver.jersey}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.codehaus.jettison</groupId>
       <artifactId>jettison</artifactId>
       <version>1.5.4</version>
