--- a/elda-common/src/main/webapp/WEB-INF/web.xml
+++ b/elda-common/src/main/webapp/WEB-INF/web.xml
@@ -13,89 +13,70 @@
     </context-param>
 
   <!-- ==================================================================== -->
-  
-  <!--
-  <filter>
-      <filter-name>UrlRewriteFilter</filter-name>
-        <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
-
-        <init-param>
-            <param-name>logLevel</param-name>
-            <param-value>DEBUG</param-value>
-        </init-param>
-
-    </filter>
-    -->
 
   <!-- suppress from the filtering log anything that mentions lda-assets. -->
-  
-  <filter>
-    <filter-name>LogRequestFilter</filter-name>
-    <filter-class>com.epimorphics.lda.support.LogRequestFilter</filter-class>
-    <init-param>
-        <param-name>com.epimorphics.lda.logging.ignoreIfMatches</param-name>
-        <param-value>.*/lda-assets/.*</param-value>
-    </init-param>
-  </filter>
 
-  <filter>
-     <filter-name>Jersey Web Application</filter-name>
-     <filter-class>com.sun.jersey.spi.container.servlet.ServletContainer</filter-class>
-     <init-param>
-       <param-name>com.sun.jersey.config.property.packages</param-name>
-       <param-value>com.epimorphics.lda.restlets</param-value>
-     </init-param>
+    <filter>
+        <filter-name>LogRequestFilter</filter-name>
+        <filter-class>com.epimorphics.lda.support.LogRequestFilter</filter-class>
+        <init-param>
+            <param-name>com.epimorphics.lda.logging.ignoreIfMatches</param-name>
+            <param-value>.*/lda-assets/.*</param-value>
+        </init-param>
+    </filter>
 
-     <init-param>
-       <param-name>com.sun.jersey.config.feature.FilterForwardOn404</param-name>
-       <param-value>true</param-value>
-     </init-param>
+    <filter>
+        <filter-name>Jersey Web Application</filter-name>
+        <filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>
 
-     <init-param>
-       <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-       <param-value>com.sun.jersey.api.container.filter.PostReplaceFilter</param-value>
-     </init-param>
-  </filter>
-  
-   <!--
-   <filter-mapping>
-     <filter-name>UrlRewriteFilter</filter-name>
-     <url-pattern>/*</url-pattern>
-   </filter-mapping>
-    -->
+        <init-param>
+            <param-name>jersey.config.property.packages</param-name>
+            <param-value>com.epimorphics.lda.restlets</param-value>
+        </init-param>
 
-  <filter-mapping>
-    <filter-name>LogRequestFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  
-  <filter-mapping>
-    <filter-name>Jersey Web Application</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+        <init-param>
+            <param-name>jersey.config.servlet.filter.forwardOn404</param-name>
+            <param-value>true</param-value>
+        </init-param>
 
-  <!-- ==================================================================== -->
+        <init-param>
+            <param-name>jersey.spi.container.ContainerRequestFilters</param-name>
+            <param-value>org.glassfish.jersey.api.container.filter.PostReplaceFilter</param-value>
+        </init-param>
+    </filter>
 
-  <listener>
-    <listener-class>com.epimorphics.lda.restlets.RouterRestlet$Init</listener-class>
-  </listener>
+    <filter-mapping>
+        <filter-name>LogRequestFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
-  <!-- ==================================================================== -->
+    <filter-mapping>
+        <filter-name>Jersey Web Application</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
-  <servlet-mapping>
-  <servlet-name>default</servlet-name>
-  <url-pattern>/*</url-pattern>
-  </servlet-mapping>
+    <!-- ==================================================================== -->
 
-  <!-- ==================================================================== -->
+    <listener>
+        <listener-class>com.epimorphics.lda.restlets.RouterRestlet$Init</listener-class>
+    </listener>
 
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-  </welcome-file-list>
+    <!-- ==================================================================== -->
 
-  <error-page>
-    <error-code>404</error-code>
-    <location>/_error_pages/404.html</location>
-  </error-page>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/*</url-pattern>
+    </servlet-mapping>
+
+    <!-- ==================================================================== -->
+
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/_error_pages/404.html</location>
+    </error-page>
 
 </web-app>
