--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -35,44 +35,25 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-    <filter>
-        <filter-name>Jersey Web Application</filter-name>
-        <filter-class>com.sun.jersey.spi.container.servlet.ServletContainer</filter-class>
-
-        <init-param>
-          <param-name>com.sun.jersey.config.property.packages</param-name>
-          <param-value>com.epimorphics.lda.restlets</param-value>
-        </init-param>
-
-        <init-param>
-          <param-name>
-          	com.sun.jersey.config.feature.FilterForwardOn404
-          <!--
-          	jersey.config.servlet.filter.forwardOn404
-          	-->
-          	</param-name>
-            <param-value>true</param-value>
-        </init-param>
-
-        <init-param>
-             <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-             <param-value>com.sun.jersey.api.container.filter.PostReplaceFilter</param-value>
-         </init-param>
-  </filter>
-
-<!-- 
-  <servlet>
-    <servlet-name>jersey</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+  <filter>
+    <filter-name>Jersey Web Application</filter-name>
+    <filter-class>org.glassfish.jersey.servlet.ServletContainer</filter-class>
 
     <init-param>
-      <param-name>com.sun.jersey.config.property.packages</param-name>
+      <param-name>jersey.config.property.packages</param-name>
       <param-value>com.epimorphics.lda.restlets</param-value>
     </init-param>
 
-    <load-on-startup>1</load-on-startup>
-  </servlet>
--->
+    <init-param>
+      <param-name>jersey.config.servlet.filter.forwardOn404</param-name>
+      <param-value>true</param-value>
+    </init-param>
+
+    <init-param>
+      <param-name>jersey.spi.container.ContainerRequestFilters</param-name>
+      <param-value>org.glassfish.jersey.api.container.filter.PostReplaceFilter</param-value>
+    </init-param>
+  </filter>
 
   <!-- ==================================================================== -->
 
@@ -93,23 +74,9 @@
     <url-pattern>/control/*</url-pattern>
   </filter-mapping>
 
-<!-- 
-  <servlet-mapping>
-    <servlet-name>jersey</servlet-name>
-    <url-pattern>/*</url-pattern>
-  </servlet-mapping>
--->
-
   <servlet-mapping>
     <servlet-name>default</servlet-name>
-<!-- <url-pattern>/*</url-pattern> -->
-    
-    <url-pattern>/again/*</url-pattern>
-    <url-pattern>/hello/*</url-pattern>
-    <url-pattern>/mini/*</url-pattern>
-    <url-pattern>/tiny/*</url-pattern>
-    <url-pattern>/full/*</url-pattern>
-    
+
     <url-pattern>/openlayers/*</url-pattern>
     <url-pattern>/velocity/*</url-pattern>
     <url-pattern>/auth/*</url-pattern>
