--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,13 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>3.3.1</version>
+      </plugin>
+
     </plugins>
   </build>
 
