--- a/elda-assets/pom.xml
+++ b/elda-assets/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0</version>
   </parent>
 
   <artifactId>elda-assets</artifactId>
